--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-sanitizer": "^1.0.6",
     "nodemon": "^2.0.22"
   }
 }
